# ci-test

./: release.toml
.github/workflows/: ci.yml  publish.yaml
a/: Cargo.toml
b/: Cargo.toml
c/: Cargo.toml
