[package]
name = "b"
version = "0.3.0"
authors = ["msiglreith <m.siglreith@gmail.com"]
edition = "2018"
license = ""
license-file = "../LICENSE.txt"
documentation = ""
homepage = "github.com/msiglreith/ci-test"
repository = "github.com/msiglreith/ci-test"
description = "b"

[lib]
path = "lib.rs"
a = { version = "0.1.0", path = "../a" }
